Correct uneven sections #2

--- a/src/blocks/about-room/about-room.scss
+++ b/src/blocks/about-room/about-room.scss
@@ -8,7 +8,6 @@
   &__title {
     margin-top: 0;
     margin-bottom: 24px;
-    padding-left: 12px;
     font-size: $font-size-medium;
   }
 
@@ -67,7 +66,6 @@
   &__icon {
     width: 45px;
     height: 45px;
-    margin-left: 14px;
     background-repeat: no-repeat;
     background-position: center;
   }
