--- a/src/blocks/range-date-calendar/range-date-calendar.scss
+++ b/src/blocks/range-date-calendar/range-date-calendar.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
 
-    @media (max-width: 380px) {
+    @media (max-width: 400px) {
       flex-direction: column;
     }
   }
@@ -27,7 +27,7 @@
   &__element {
     width: 150px;
 
-    @media (max-width: 380px) {
+    @media (max-width: 400px) {
       width: 100%;
     }
   }
