--- a/src/pages/website-pages/room-details/room-details.scss
+++ b/src/pages/website-pages/room-details/room-details.scss
@@ -16,10 +16,18 @@
   }
 
   &__first-orders {
-    margin: 0 100px 0 11px;
+    margin: 0 100px 0 31px;
+
+    @media (max-width: 1200px) {
+      margin: 0 100px 0 10px;
+    }
 
     @media (max-width: 720px) {
       margin-right: 0;
+    }
+
+    @media (max-width: 693px) {
+      margin: 20px 10px 50px 0;
     }
   }
 
@@ -126,6 +134,7 @@
     display: flex;
     max-width: 672px;
     margin-bottom: 20px;
+    margin: 0 0 20px 12px;
 
     @media (max-width: 1200px) {
       margin-top: 60px;
@@ -134,6 +143,10 @@
     @media (max-width: 693px) {
       flex-direction: column;
       align-items: center;
+    }
+
+    @media (max-width: 693px) {
+      margin: 60px 0 0 0;
     }
   }
 
@@ -168,14 +181,27 @@
     color: $color-shade-grey;
     font-size: $font-size-main;
     list-style: none;
+
+    @media (max-width: 1200px) {
+      margin-right: 10px;
+    }
   }
 
   &__about-room-container {
-    margin-right: 87px;
+    margin-right: 79px;
+
+    @media (max-width: 693px) {
+      margin-right: 26px  ;
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: 693px) {
+      margin-right: 26px;
+      margin-bottom: 30px;
+    }
 
     @media (max-width: 693px) {
       margin-right: 0;
-      margin-bottom: 30px;
     }
   }
 
@@ -188,14 +214,7 @@
 
     @media (max-width: 693px) {
       margin: 0 10px;
-    }
-
-    @media (max-width: 380px) {
-      width: auto;
-    }
-
-    @media (max-width: 341px) {
-      width: 300px;
+      width: 255px;
     }
   }
 
@@ -207,15 +226,13 @@
   }
 
   &__user-reviews {
-    margin-top: 37px;
-    margin-left: 10px;
+    margin: 37px 0 0 10px;
   }
 
   &__user-reviews-comments {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-right: 15px;
     margin-bottom: 20px;
   }
 
